# amp

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  amp-code.db  opencode.toml  route-config.toml
cmd/amp-code/: Cargo.toml
cmd/amp-code/src/: main.rs
doc/: OVERVIEW.md  README.md  quickstart.md
doc/manual/: 01-getting-started.md  02-usage.md  03-agents-md.md  04-projects.md  05-orbs-runners.md  06-tools.md  07-plugins.md  08-mcp.md  09-configuration.md  10-pricing.md  11-cli.md  12-code-review.md  13-skills.md
doc/tech/: architecture.md  plugin-system.md  protocol.md
doc/tech/source-map/: byok-design.md  module-map.md
docs/superpowers/plans/: 2026-07-17-byok-project.md
pkg/amp-core/: Cargo.toml
pkg/amp-core/src/: config.rs  error.rs  lib.rs  session.rs  thread.rs
pkg/amp-proxy/: Cargo.toml
pkg/amp-proxy/src/: injector.rs  lib.rs  router.rs  streamer.rs  transformer.rs
pkg/amp-server/: Cargo.toml
pkg/amp-server/src/: app.rs  lib.rs
pkg/amp-server/src/routes/: admin.rs  auth.rs  chat.rs  mod.rs  session.rs  thread.rs
pkg/amp-storage/: Cargo.toml
pkg/amp-storage/src/: lib.rs  migrations.rs  sqlite.rs  users.rs
resource/: README.md  amp-version.txt  amp.sha256  git-status.txt  install.sh
resource/binary/: analysis.md  load-commands.txt
resource/binary/extracted/: analysis.md
resource/binary/sections/: analysis.md
resource/binary/strings/: catalog.md  embedded-files.txt  errors.txt  graphql-operations.txt  vfs-paths.txt
resource/binary/symbols/: analysis.md
web/: package-lock.json
web/app/: layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/admin/users/[id]/: layout.tsx  page.tsx
web/lib/: api.ts  types.ts
