[package]
name = "amp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
amp-core = { path = "../amp-core" }
amp-proxy = { path = "../amp-proxy" }
amp-storage = { path = "../amp-storage" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"
uuid = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
sqlx = { workspace = true }
